# chat

./: .gitignore  CMakeLists.txt  README.md  build.sh  protocol.h  run.sh  test_features.py
client/: clientnetwork.cpp  clientnetwork.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h
client/dialogs/: frienddlg.cpp  frienddlg.h  groupcreatedlg.cpp  groupcreatedlg.h  historydlg.cpp  historydlg.h  imagedlg.cpp  imagedlg.h  memberdlg.cpp  memberdlg.h
client/widgets/: bubble.cpp  bubble.h  chat.cpp  chat.h
docs/superpowers/specs/: 2026-05-18-missing-features-design.md
server/: database.cpp  database.h  main.cpp  server.cpp  server.h
server/handlers/: auth.cpp  file.cpp  friend.cpp  group.cpp  msg.cpp
